<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/makka" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/swissra_medium"
        android:text="دليلك فى مكة المكرمة"
        android:textColor="@color/white"
        android:textSize="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/caffee"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="8dp"
        android:background="@drawable/raduis_border2"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/hotel"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/coffee" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:text="@string/coffees"
            android:textColor="@color/colorGrey"
            android:textSize="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hotel"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/raduis_border2"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintRight_toLeftOf="@+id/caffee"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/hotel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:text="@string/hotels"
            android:textColor="@color/colorGrey"
            android:textSize="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/doctor"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="8dp"
        android:background="@drawable/raduis_border2"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="@id/shop"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caffee">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/doctor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:text="@string/doctors"
            android:textColor="@color/colorGrey"
            android:textSize="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/shop"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/raduis_border2"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintRight_toLeftOf="@+id/doctor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hotel">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/shop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:text="@string/shops"
            android:textColor="@color/colorGrey"
            android:textSize="10dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>